--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>SIEUSOIL - HS Layers</title>
+  <title>Polirural - HS Layers</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -24,7 +24,7 @@
       return new ol.style.Style({
         image: new ol.style.Icon({
           anchor: [0.5, 1],
-          src: 'sieusoil_pin.png',
+          src: 'polirural_pin.png',
           scale: 0.1
         }),
       });
@@ -58,14 +58,14 @@
             removable: false
           }),
           new ol.layer.Vector({
-            title: 'Members',
+            title: 'Pilots',
             style: styleFunction,
             editor: {
               editable: false,
             },
             source: new ol.source.Vector({
               format: new ol.format.GeoJSON(),
-              url: 'https://raw.githubusercontent.com/jmacura/sieusoil-website-map/main/data/Sieusoil_Pilots.geojson'
+              url: 'https://raw.githubusercontent.com/jmacura/polirural-website-map/main/data/Polirural_Pilots.geojson'
             }),
             cluster: false
           })
