--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
   <div style="height:30em; width: 100%">
-    <div id="hs-app" hs ng-app="hs" ng-controller="Main" style="position: relative; width: 100%; height: 100%; padding: 0; border: 0; margin: 0;"> </div>
+    <hs id="hs-app" ng-app="hs" style="position: relative; width: 100%; height: 100%; padding: 0; border: 0; margin: 0;"></hs>
   </div>
 
 <script>
-    window.HSL_PATH = './lib/'; //'https://unpkg.com/hslayers-ng@1.24.3/dist/';
+    window.HSL_PATH = 'https://unpkg.com/hslayers-ng@1.26.0/dist/'; //'./lib/';
 
     function getLRUser() {
       return (0);
@@ -67,7 +67,10 @@
               format: new ol.format.GeoJSON(),
               url: 'https://raw.githubusercontent.com/jmacura/polirural-website-map/main/data/Polirural_Pilots.geojson'
             }),
-            cluster: false
+            cluster: false,
+            onFeatureSelected: (feature) => {
+              feature.get('website') ? window.open(feature.get('website'), '_blank') : null;
+            }
           })
         ],
         default_view: new ol.View({
@@ -79,8 +82,8 @@
       }
     }
 </script>
-<script src='./lib/hslayers-ng.main.js'></script>
-<!--script src='https://unpkg.com/hslayers-ng@1.24.3/dist/hslayers-ng.main.js'></script-->
+<!--script src='./lib/hslayers-ng.main.js'></script-->
+<script src='https://unpkg.com/hslayers-ng@1.26.0/dist/hslayers-ng.main.js'></script>
 
 </body>
 </html>
