--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       return new ol.style.Style({
         image: new ol.style.Icon({
           anchor: [0.5, 1],
-          src: 'polirural_pin.png',
-          scale: 0.1
+          src: 'polirural_pin_sm.png',
+          //scale: 0.1
         }),
       });
     }
