Open website in this window instead of a new one

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             }),
             cluster: false,
             onFeatureSelected: (feature) => {
-              feature.get('website') ? window.open(feature.get('website'), '_blank') : null;
+              feature.get('website') ? window.open(feature.get('website'), '_top') : null;
             }
           })
         ],
